Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28027

QtCreator crashes when closing SCXML state chart

XMLWordPrintable

    • Linux/X11
    • 5e6ad51e97 (qt-creator/qt-creator/8.0) 5e6ad51e97 (qt-creator/qt-creator/qds-3.6) 5e6ad51e97 (qt-creator/qt-creator/master) 5e6ad51e97 (qt-creator/qt-creator/qds-dev) 5e6ad51e97 (qt-creator/qt-creator/9.0) 5e6ad51e97 (qt-creator/qt-creator/qds-3.7)

      After updating to QtCreator 8.0.0 (came with Arch Linux update) I noticed that QtCreator reproducibly crashes with segmentation fault after closing certain scxml state charts (not all, but most included in my project). I tried to reduce complexity of one of the affected state charts as much as I could and created a "test.scxml".

      Steps to reproduce:
      1. Open the attached state chart "test.scxml" in QtCreator
      2. Close the state chart
      3. wait 1-2 sec. until QtCreator crashes with segmentation fault

      This bug was not present in QtCreator 7.0.2

        1. test.scxml
          4 kB
          Markus Lohse
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jkobus Jarek Kobus
            mlohse Markus Lohse
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes